--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "gatsby": "^2.23.9",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-react-helmet": "^3.3.5",
@@ -19,10 +20,13 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "netlify-cli": "^2.54.0"
   },
   "engines": {
